--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,4 +24,5 @@ jobs:
       uses: actions/setup-node@v4
     # - run: npm ci
     # - run: npm run build --if-present
+    - run: npm install
     - run: npm test
