--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,15 +14,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [0.10.48]
-
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-    # - run: npm ci
-    # - run: npm run build --if-present
+    - uses: actions/setup-node@v4
     - run: npm install
     - run: npm test
