--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,5 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
+      with:
+        node-version-file: '.nvmrc'
     - run: npm install
     - run: npm test
