--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,8 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install xmllint
-      run: sudo apt-get install -y git build-essential nodejs nodejs-legacy npm coffeescript redis-server libgd2-xpm-dev libicu-dev
+    - name: Install dependencies
+      run: |
+        sudo apt-get update -qq
+        sudo apt-get install -y git build-essential nodejs nodejs-legacy npm coffeescript redis-server libgd2-xpm-dev libicu-dev
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
