--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,5 +23,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version-file: '.nvmrc'
+    - name: Install NPM dependencies
+      run: npm install -g node-gyp@~0.10
     - run: npm install
     - run: npm test
