--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,12 +18,14 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update -qq
-        sudo apt-get install -y git build-essential nodejs npm coffeescript redis-server libicu-dev
+        sudo apt-get install -y git build-essential nodejs npm coffeescript redis-server libicu-dev python2
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version-file: '.nvmrc'
-    - name: Install NPM dependencies
-      run: npm install -g node-gyp@~0.10
+    - name: Configure and install NPM dependencies
+      run: |
+        npm config set python python2
+        npm install -g node-gyp@~0.10
     - run: npm install
     - run: npm test
